--- a/src/css/style.module.css
+++ b/src/css/style.module.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Gentium+Book+Plus&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");
 /* Navbar Styling */
 .main_container {
   align-items: center;
@@ -15,8 +15,8 @@
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   transition-delay: 0s;
-  background: rgba(1, 16, 18, 0.9);
-  /* background: none; */
+  /* background: rgba(1, 16, 18, 0.9); */
+  background: none;
   color: white;
 }
 .btn2 {
@@ -114,4 +114,20 @@ ul li {
   background-origin: initial;
   background-clip: initial;
   background-color: initial;
+}
+
+/* Footer */
+/* .SocialLink:hover {
+  color: red;
+  background-color: aqua;
+} */
+.a:hover {
+  color: rgb(10, 10, 14);
+}
+
+/* Login Modal */
+.modalhead {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
