day 5 task complested

--- a/src/css/style.module.css
+++ b/src/css/style.module.css
@@ -21,7 +21,7 @@
 }
 .btn2 {
   padding: 10px 25px;
-  margin-bottom: -10px;
+  /* margin-bottom: -10px; */
   line-height: 20px;
   width: 157px;
 }
