--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,20 @@
   top: 0px;
   left: 0px;
   z-index: 1000;
-  padding: 20px;
+  padding: 30px;
   box-sizing: border-box;
   transition: all 0.2s ease-in-out;
   transition-property: all;
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   transition-delay: 0s;
-  background: rgba(1, 16, 18, 0.9);
-  /* background: none; */
+  background: transparent;
+  opacity: 0.9;
   color: white;
+}
+
+.navbar.active {
+  background-color: #2b2a2a;
+  color: white;
+  height: 80px;
 }
